Fix jumping background image when panels are opened

--- a/src/app/sites/cv/cv.component.scss
+++ b/src/app/sites/cv/cv.component.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
+    margin: 4rem 0;
 }
 
 // All controls
@@ -39,6 +40,7 @@
 @media (max-width: 767px) {
     .page {
         align-self: flex-start;
+        gap: 1rem
     }
 
     .control-wrapper {
