--- a/src/styles/images.scss
+++ b/src/styles/images.scss
@@ -1,12 +1,12 @@
 .background-image {
     position: absolute;
+    left: 0;
+    top: 0;
     z-index: -1;
+    width: 100vw;
     clip-path: circle(50% at center);
     transition: opacity 1.5s ease;
     opacity: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .background-image.show {
