--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,6 +3,7 @@
     display: grid;
     place-items: center;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .hidden {
